--- a/package.json
+++ b/package.json
@@ -1,9 +1,11 @@
 {
   "name": "orange-dragonfly-validator",
-  "version": "0.7.6",
+  "version": "0.7.7",
   "description": "Library for input parameters validation",
   "main": "index.js",
   "scripts": {
+    "example": "node examples/example.js",
+    "generate-docs": "node generate-docs.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
