--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "example": "node examples/example.js",
     "generate-docs": "node generate-docs.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "npx jest",
+    "eslint": "eslint ./",
+    "eslint-fix": "eslint ./ --fix"
   },
   "repository": {
     "type": "git",
@@ -27,5 +29,14 @@
   "bugs": {
     "url": "https://github.com/charger88/orange-dragonfly-validator/issues"
   },
-  "homepage": "https://github.com/charger88/orange-dragonfly-validator#readme"
+  "homepage": "https://github.com/charger88/orange-dragonfly-validator#readme",
+  "devDependencies": {
+    "babel-preset-env": "^1.7.0",
+    "eslint": "^7.32.0",
+    "eslint-config-standard": "^16.0.3",
+    "eslint-plugin-import": "^2.25.3",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-promise": "^5.1.1",
+    "jest": "^29.4.3"
+  }
 }
