--- a/package.json
+++ b/package.json
@@ -1,18 +1,44 @@
 {
   "name": "orange-dragonfly-validator",
-  "version": "0.8.0",
+  "version": "0.9.0",
   "description": "Library for input parameters validation",
-  "main": "index.js",
-  "scripts": {
-    "example": "node examples/example.js",
-    "generate-docs": "node generate-docs.js",
-    "test": "npx jest",
-    "eslint": "eslint ./",
-    "eslint-fix": "eslint ./ --fix"
+  "type": "module",
+  "main": "./dist/index.cjs",
+  "module": "./dist/index.js",
+  "types": "./dist/index.d.ts",
+  "exports": {
+    ".": {
+      "import": {
+        "types": "./dist/index.d.ts",
+        "default": "./dist/index.js"
+      },
+      "require": {
+        "types": "./dist/index.d.cts",
+        "default": "./dist/index.cjs"
+      }
+    }
+  },
+  "files": [
+    "dist"
+  ],
+  "engines": {
+    "node": ">=18"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/charger88/orange-dragonfly-validator.git"
+  },
+  "scripts": {
+    "example": "npx tsx examples/example.ts",
+    "example:builder": "npx tsx examples/builder-example.ts",
+    "example:readme": "npx tsx examples/readme-example.ts",
+    "generate-docs": "npx tsx generate-docs.ts",
+    "build": "tsup",
+    "test": "jest",
+    "benchmark": "npx tsx tests/benchmark/run.ts",
+    "eslint": "eslint ./src",
+    "eslint:fix": "eslint --fix ./src",
+    "prepublishOnly": "npm run build"
   },
   "keywords": [
     "validation",
@@ -21,9 +47,9 @@
     "validator"
   ],
   "author": {
-    "name": "Michael Kelner",
+    "name": "Mike Kelner",
     "email": "mikhail.kelner@gmail.com",
-    "url": "https://michaelkelner.com/"
+    "url": "https://www.michaelkelner.com/"
   },
   "license": "ISC",
   "bugs": {
@@ -31,12 +57,14 @@
   },
   "homepage": "https://github.com/charger88/orange-dragonfly-validator#readme",
   "devDependencies": {
-    "babel-preset-env": "^1.7.0",
-    "eslint": "^7.32.0",
-    "eslint-config-standard": "^16.0.3",
-    "eslint-plugin-import": "^2.25.3",
-    "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-promise": "^5.1.1",
-    "jest": "^29.4.3"
+    "@eslint/js": "^9.39.2",
+    "@types/jest": "^30.0.0",
+    "eslint": "^9.39.2",
+    "globals": "^17.3.0",
+    "jest": "^30.2.0",
+    "ts-jest": "^29.4.6",
+    "tsup": "^8.5.1",
+    "typescript": "^5.9.3",
+    "typescript-eslint": "^8.54.0"
   }
 }
